cptidy - refactored and moved more code to separate classes; added more file comparison strategies; improved logging and file name resolution; rewritten and added tests.