@@ -11,20 +11,22 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.security.MessageDigest;
-import java.security.NoSuchAlgorithmException;
 import java.util.Collection;
 import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
-import static java.nio.file.StandardOpenOption.*;
+import static java.nio.file.StandardOpenOption.CREATE;
+import static java.nio.file.StandardOpenOption.TRUNCATE_EXISTING;
 
 @Singleton
 public class Io {
 
+    // this is more of an internal module than a dependency
+    private final FileCompare fileCompare = new FileCompare();
+
     public String read(Path path) throws IOException {
-        return new String(Files.readAllBytes(path));
+        return Files.readString(path);
     }
 
     public Path write(Path path, String content) throws IOException {
@@ -33,58 +35,8 @@ public class Io {
         return path;
     }
 
-    public String hash(Path path) throws IOException {
-        try {
-            MessageDigest digest = MessageDigest.getInstance("SHA-256");
-
-            try (InputStream inputStream = Files.newInputStream(path, READ)) {
-                int bytesRead;
-                byte[] buffer = new byte[1024];
-
-                while ((bytesRead = inputStream.read(buffer)) != -1) {
-                    digest.update(buffer, 0, bytesRead);
-                }
-            }
-
-            StringBuilder sb = new StringBuilder();
-            for (byte b : digest.digest()) {
-                sb.append(Integer.toString((b & 0xff) + 0x100, 16).substring(1));
-            }
-            return sb.toString();
-        } catch (NoSuchAlgorithmException e) {
-            throw new IOException(e);
-        }
-    }
-
     public boolean haveSameContent(Path pathA, Path pathB) throws IOException {
-        if (!Files.exists(pathA) || !Files.exists(pathB) || Files.size(pathA) != Files.size(pathB)) {
-            return false;
-        }
-
-        byte[] bufferA = new byte[16 * 1024];
-        byte[] bufferB = new byte[16 * 1024];
-
-        int i;
-        int bytesReadA = 0;
-        int bytesReadB;
-
-        try (InputStream inputStreamA = Files.newInputStream(pathA, READ); InputStream inputStreamB = Files.newInputStream(pathB, READ)) {
-            while (bytesReadA != -1) {
-                bytesReadA = inputStreamA.read(bufferA);
-                bytesReadB = inputStreamB.read(bufferB);
-                if (bytesReadA != bytesReadB) {
-                    return false;
-                } else {
-                    for (i = 0; i < bytesReadA; i++) {
-                        if (bufferA[i] != bufferB[i]) {
-                            return false;
-                        }
-                    }
-                }
-            }
-        }
-
-        return true;
+        return fileCompare.byByteChannel(pathA, pathB, 16 * 1024 * 1024);
     }
 
     public void copy(Path source, Path target) throws IOException {
